--- a/src/app/home/HomeCss.css
+++ b/src/app/home/HomeCss.css
@@ -5,6 +5,7 @@
     left: 0;
     right: 0;
     margin: auto;
-    width: 300px;
-    height: 300px;
+    width: 80%;
+    max-width: 400px;
+    height: 600px;
 }
