--- a/src/app/auth/AuthCss.css
+++ b/src/app/auth/AuthCss.css
@@ -1,13 +1,14 @@
-.card {
+.custom-card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.9s;
     border-radius: 5px;
     padding: 15px;
     margin: auto;
     background-color: rgba(72, 72, 72, 0.5);
+     /* transform: perspective(1000px) rotateY(var(--rotate-y, 0)) translateY(var(--translate-y, 0)); */
 }
 
-.card:hover {
+.custom-card:hover {
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
@@ -48,3 +49,7 @@
     justify-content: center;
 
 }
+
+
+
+  
