--- a/src/app/auth/AuthCss.css
+++ b/src/app/auth/AuthCss.css
@@ -1,55 +1,93 @@
 .custom-card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.9s;
-    border-radius: 5px;
-    padding: 15px;
-    margin: auto;
-    background-color: rgba(72, 72, 72, 0.5);
-     /* transform: perspective(1000px) rotateY(var(--rotate-y, 0)) translateY(var(--translate-y, 0)); */
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  padding: 15px;
+  margin: auto;
+  background-color: rgba(72, 72, 72, 0.5);
+  height: 70%;
+  transform-style: preserve-3d;
+  transition: 150ms;
+  transform: perspective(1000px) rotateY(var(--rotate-y, 0))
+    translateY(var(--translate-y, 0));
 }
 
 .custom-card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
 .header {
-    color: white;
-    font-weight: 600;
-    font-size: x-large;
+  color: white;
+  font-weight: 600;
+  font-size: x-large;
 }
 
 .social-icons {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.9s;
-    border-radius: 5px;
-    padding: 3%;
-    vertical-align: middle;
-    margin: 5px;
-    width: 15%;
-    max-width: 40px;
-    height: 40px;
-    color: black;
-    font-size: xx-large;
-    background-color: rgba(255, 255, 255, 0.709);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.9s;
+  border-radius: 5px;
+  padding: 3%;
+  vertical-align: middle;
+  margin: 5px;
+  width: 15%;
+  max-width: 40px;
+  height: 33px;
+  max-height: 33px;
+  color: black;
+  font-size: xx-large;
+  background-color: rgba(255, 255, 255, 0.709);
 }
 
 .social-icons:hover {
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-    background-color: rgba(255, 255, 255, 0.341);
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  background-color: rgba(255, 255, 255, 0.341);
 }
 
 .social-icons:active {
-    background-color:rgb(140, 249, 63);  
+  background-color: rgb(140, 249, 63);
 }
 
 .social-group {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
+.custom-card .front {
+  position: absolute;
+  padding: 1rem;
+  backface-visibility: hidden;
+}
+.custom-card .back {
+  backface-visibility: hidden;
+  color: white;
+  width: 100%;
+}
 
+.custom-card .back {
+  transform: rotateY(180deg);
+}
 
-  
+.custom-card.flip {
+  --rotate-y: 180deg;
+}
+
+.phone-title {
+  font-size: 30px;
+  font-weight: 500;
+}
+
+.btn {
+  display: flex;
+  flex-direction: row;
+  background-color: rgba(104, 248, 79, 0.607);
+  border: none;
+  color: rgb(0, 0, 0);
+  padding: 12px 16px;
+  font-size: 25px;
+  cursor: pointer;
+  max-width: 80px;
+}
+.btn:hover {
+  background-color: rgb(225, 254, 214);
+}
