--- a/src/app/auth/AuthCss.css
+++ b/src/app/auth/AuthCss.css
@@ -78,15 +78,15 @@
 }
 
 .btn {
-  display: flex;
-  flex-direction: row;
+  /* display: flex; */
+  /* flex-direction: row; */
   background-color: rgba(104, 248, 79, 0.607);
   border: none;
   color: rgb(0, 0, 0);
-  padding: 12px 16px;
-  font-size: 25px;
+  padding: 5px;
+  font-size: 20px;
   cursor: pointer;
-  max-width: 80px;
+  max-width: 60px;
 }
 .btn:hover {
   background-color: rgb(225, 254, 214);
