--- a/src/app/auth/AuthCss.css
+++ b/src/app/auth/AuthCss.css
@@ -1,15 +1,25 @@
+body{ 
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+}
 .custom-card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   border-radius: 5px;
   padding: 15px;
   margin: auto;
   background-color: rgba(72, 72, 72, 0.5);
-  height: 70%;
+  height: 75%;
   transform-style: preserve-3d;
   transition: 150ms;
   transform: perspective(1000px) rotateY(var(--rotate-y, 0))
     translateY(var(--translate-y, 0));
+    
 }
+
+
+
 
 .custom-card:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
@@ -57,6 +67,7 @@
   position: absolute;
   padding: 1rem;
   backface-visibility: hidden;
+  width: 85%;
 }
 .custom-card .back {
   backface-visibility: hidden;
@@ -76,7 +87,12 @@
   font-size: 30px;
   font-weight: 500;
 }
-
+.back{
+  height: 100%;
+  width: 100%;
+  display: flix;
+  justify-content: space-between; 
+}
 .btn {
   /* display: flex; */
   /* flex-direction: row; */
@@ -86,7 +102,7 @@
   padding: 5px;
   font-size: 20px;
   cursor: pointer;
-  max-width: 60px;
+  /* max-width: 60px; */
 }
 .btn:hover {
   background-color: rgb(225, 254, 214);
