--- a/src/app/home/HomeCss.css
+++ b/src/app/home/HomeCss.css
@@ -8,4 +8,18 @@
     width: 80%;
     max-width: 400px;
     height: 600px;
+    
+}
+
+.loader{
+    display: flex;
+    z-index: 9999;
+}
+
+.loader-page{
+    background-color: rgba(227, 227, 227, 0.306);
+    width: 100%;
+    height: 80%;
+    position: inherit;
+    z-index: 9998;
 }
