--- a/src/app/auth/AuthCss.css
+++ b/src/app/auth/AuthCss.css
@@ -73,6 +73,8 @@ body{
   backface-visibility: hidden;
   color: white;
   width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .custom-card .back {
@@ -89,9 +91,7 @@ body{
 }
 .back{
   height: 100%;
-  width: 100%;
-  display: flix;
-  justify-content: space-between; 
+  justify-content: space-around; 
 }
 .btn {
   /* display: flex; */
