--- a/src/app/home/HomeCss.css
+++ b/src/app/home/HomeCss.css
@@ -14,6 +14,9 @@
 .loader{
     display: flex;
     z-index: 9999;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .loader-page{
@@ -23,3 +26,44 @@
     position: inherit;
     z-index: 9998;
 }
+
+
+.button-redirect {
+    display: inline-block;
+    border-radius: 4px;
+    background-color: #3e990d;
+    border: none;
+    color: #ffffff;
+    text-align: center;
+    font-size: 18px;
+    padding: 10px;
+    width: 200px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 50px;
+  }
+  
+  .button-redirect span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
+  
+  .button-redirect span:after {
+    content: "\00bb";
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+  }
+  
+  .button-redirect:hover span {
+    padding-right: 25px;
+  }
+  
+  .button-redirect:hover span:after {
+    opacity: 1;
+    right: 0;
+  }
