--- a/src/app/auth/AuthCss.css
+++ b/src/app/auth/AuthCss.css
@@ -13,8 +13,8 @@ body {
   background-color: rgba(72, 72, 72, 0.5);
   height: 75%;
   transform-style: preserve-3d;
-  transition: 150ms;
-  transform: perspective(1000px) rotateY(var(--rotate-y, 0)) translateY(var(--translate-y, 0));
+  /* transition: 150ms; */
+  /* transform: perspective(1000px) rotateY(var(--rotate-y, 0)) translateY(var(--translate-y, 0)); */
 
 }
 
@@ -61,36 +61,8 @@ body {
   justify-content: center;
 }
 
-.custom-card .front {
-  position: absolute;
-  padding: 1rem;
-  backface-visibility: hidden;
-  width: 85%;
-}
-
-.custom-card .back {
-  backface-visibility: hidden;
-  color: white;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-.custom-card .back {
-  transform: rotateY(180deg);
-}
-
-.custom-card.flip {
-  --rotate-y: 180deg;
-}
 
 .phone-title {
   font-size: 30px;
   font-weight: 500;
-}
-
-.back {
-  height: 100%;
-  justify-content: space-around;
-  align-items: center;
 }
