--- a/src/app/auth/SignInWithPhoneNumber/SignInWithPhoneNumber.css
+++ b/src/app/auth/SignInWithPhoneNumber/SignInWithPhoneNumber.css
@@ -7,11 +7,11 @@
   text-align: center;
   font-size: 18px;
   padding: 10px;
-  width: 90%;
+  width: 60%;
   max-width: 345px;
   transition: all 0.5s;
   cursor: pointer;
-  margin: 5px;
+  margin: 15px;
 }
 
 .btn:hover  {
@@ -45,4 +45,8 @@
     color: white;
     font-weight: 600;
     font-size: x-large;
+}
+
+.select-country {
+  background-color: white !important;
 }
